# drone-corridor-test

./: .gitignore  Dockerfile  PROJECT_SUMMARY.md  README.md  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh  install_nvidia_docker.sh  run.sh
ros2_ws/src/drone_corridor_sim/: CMakeLists.txt  package.xml
ros2_ws/src/drone_corridor_sim/config/: rviz2_config.rviz
ros2_ws/src/drone_corridor_sim/drone_corridor_sim/: __init__.py
ros2_ws/src/drone_corridor_sim/launch/: corridor_sim.launch.py
ros2_ws/src/drone_corridor_sim/scripts/: test_sub.py
ros2_ws/src/drone_corridor_sim/urdf/: sjtu_drone_extended.urdf.xacro
ros2_ws/src/drone_corridor_sim/worlds/: corridor.world
